Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-11678

The priority in Service Network is not accessible through QNetworkConfiguration API

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 4.7.0
    • 4.7.0
    • None
    • 959efa8daab2715d18440ed8b890b9dd2b501fc7 88d721fa8d28519e98207ca0249ff057faef8af0

      This bug is cloned from https://bsetpl02.americas.nokia.com/browse/BR-3704.

      STEPS TO REPRODUCE:
      Not available through QNetworkConfiguration API
      ACTUAL RESULTS:

      EXPECTED RESULTS:
      Priority in Service Network is an important information

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            amccarth Aaron McCarthy (closed Nokia identity) (Inactive)
            h2lu Hao Lu
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes