Order network configurations in service networks in priority order.

It is useful to know the priority order of the sub configurations of
a service network.

Task-number: QTBUG-11678
RevBy: juhvu <qt-info@nokia.com>
(cherry picked from commit 959efa8daab2715d18440ed8b890b9dd2b501fc7)